--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 .nav {
-  height : 50px;
-  border-bottom: 1px solid black;
-  display: flex;
+  height: 50px;
+  display: flex sold black;
   align-items: center;
 }
 .nav-items {
