--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .nav {
   height: 50px;
-  display: flex sold black;
+  border-bottom: 1px solid black;
+  display: flex;
   align-items: center;
 }
 .nav-items {
